# synchro.rs

./: .gitignore  Cargo.toml  README.md  build.rs
audio-input/: CMakeLists.txt  audio.c  config.h  core.c  debug.h  util.h
audio-input/input/: CMakeLists.txt  alsa.c  common.c  common.h  fifo.c  portaudio.c  pulse.c  shmem.c  sndio.c
middleware/: Cargo.toml
middleware/src/: core.rs  lib.rs  raw.rs  test.rs
protocol/: Cargo.toml
protocol/src/: audio.rs  audiodata.rs  lib.rs  raw.rs  send.rs
server/: Cargo.toml
server/src/: broadcaster.rs  client.rs  host.rs  sample-main.txt
src/: main.rs
tcp_service/: Cargo.toml
tcp_service/src/: broadcaster.rs  client.rs  handshake.rs  host.rs  lib.rs  protocol.rs  protocol_helpers.rs  raw.rs  sample-main.txt
tui/: Cargo.toml
