[package]
name = "synchro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synchro"

[dependencies]
protocol = { path = "protocol" }
tcp-service = { path = "tcp_service" }
tui = { path = "tui" }
middleware = { path = "middleware" }

pulse = { version = "1.20.1", package = "libpulse-sys" }

[build-dependencies]
cmake = "0.1.49"
