[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
middleware = { path = "../middleware" }

serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1.1"
alsa = "0.7"
